syntax = "proto3";

package org.example.proto;

service TrendingMovieService {
  rpc GetTop10Ratings (Top10RatingsRequest) returns (Top10RatingsResponse);
}

message Top10RatingsRequest {
  // You can add fields here if needed
}

message MovieInfo {
  string movieId = 1;
  string name = 2;
  string description = 3;
}

message Top10RatingsResponse {
  repeated MovieInfo movies = 1;
}
